packages/toi/test/fixtures/valid/minimal.toi
{
  "$toi": "1.0.0",
  "$tier": "personal",
  "identity": {
    "author": "anonymous"
  }
}
