packages/toi/test/fixtures/invalid/not-json.toi
{
  "$toi": "1.0.0",
  "$tier": "personal",
  identity: { author: "trailing comma + unquoted keys -> not valid JSON" },
}
